# telephone-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
data/example/: policy.yaml  questionnaires.yaml
docs/: architecture.md  decisions.md  plan.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_transcript_segments.py  0003_answer_refusal.py
specs/: _template.md
specs/active/: 2026-07-18-2000-data-model.md  2026-07-20-2220-deploy-pipeline-and-skeleton-service.md  2026-07-21-1448-centralise-config-into-settings.md  2026-07-21-1628-finalize-on-call-teardown.md  2026-07-22-0012-store-call-transcript.md
specs/done/: 2026-07-20-1741-dotenv-local-config.md  2026-07-20-2041-alembic-url-via-config.md  2026-07-20-2041-test-migrations-env-restore.md  2026-07-20-2220-deploy-pipeline-and-skeleton-service.md  2026-07-21-1205-vertical-slice-one-call-one-question.md  2026-07-21-1602-realtime-ga-shape-not-beta.md  2026-07-21-1602-ship-example-config-in-image.md  2026-07-21-1628-finalize-on-call-teardown.md  2026-07-22-0012-store-call-transcript.md  2026-07-22-0755-full-questionnaire-ask-all-questions.md  2026-07-22-0844-drain-goodbye-before-hangup.md  2026-07-22-0923-admin-ui.md  2026-07-22-0934-policy-retry-and-refusal-reason.md
src/: app.py  bridge.py  config.py  db.py  env.py  models.py  policy.py  runner.py
src/agent/: __init__.py  session.py  tools.py
tests/: conftest.py  test_app.py  test_bridge.py  test_call_status.py  test_completion.py  test_config.py  test_env.py  test_migrations.py  test_policy.py  test_runner.py  test_session.py  test_storage.py  test_tools.py  test_ui.py  test_voice_webhook.py
(+5 files in other folders)
