[project]
name = "telephone-bot"
version = "0.1.0"
description = "Outbound voice agent that calls a number, asks a questionnaire, and collects structured answers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "phonenumbers>=8.13",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.29",
    "twilio>=9.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the project root on sys.path so `from tests.conftest import ...` resolves
# under a bare `pytest` (CI), not only under `python -m pytest` (which adds cwd).
pythonpath = ["."]

[tool.ruff]
line-length = 100
